# leverageshap

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  run.py  run_small.py
leverageshap/: benchmark.py  datasets.py  utils.py  visuals.py
output/: Adult_Fourier SHAP.csv  Adult_Kernel ProxySPEX paired.csv  Adult_Kernel ProxySPEX unpaired.csv  Adult_Kernel SHAP.csv  Adult_LASSO Kernel Paired 1n.csv  Adult_LASSO Kernel Paired 2n.csv  Adult_LASSO Kernel Unpaired 1n.csv  Adult_LASSO Kernel Unpaired 2n.csv  Adult_LASSO Uniform Paired 1n.csv  Adult_LASSO Uniform Paired 2n.csv  Adult_LASSO Uniform Unpaired 1n.csv  Adult_LASSO Uniform Unpaired 2n.csv  Adult_Leverage SHAP.csv  Adult_New SHAP.csv  Adult_Permutation SHAP.csv  Adult_ProxySPEX Kernel Paired 1n.csv  Adult_ProxySPEX Kernel Paired 2n.csv  Adult_ProxySPEX Kernel Unpaired 1n.csv  Adult_ProxySPEX Kernel Unpaired 2n.csv  Adult_ProxySPEX Uniform Paired 1n.csv  Adult_ProxySPEX Uniform Paired 2n.csv  Adult_ProxySPEX Uniform Unpaired 1n.csv  Adult_ProxySPEX Uniform Unpaired 2n.csv  Adult_Regression MSR.csv  Adult_Uniform ProxySPEX paired.csv  Adult_Uniform ProxySPEX unpaired.csv  California_Fourier SHAP.csv  California_Kernel ProxySPEX paired.csv  California_Kernel ProxySPEX unpaired.csv  California_Kernel SHAP.csv  California_LASSO Kernel Paired 1n.csv  California_LASSO Kernel Paired 2n.csv  California_LASSO Kernel Unpaired 1n.csv  California_LASSO Kernel Unpaired 2n.csv  California_LASSO Uniform Paired 1n.csv  California_LASSO Uniform Paired 2n.csv  California_LASSO Uniform Unpaired 1n.csv  California_New SHAP.csv  (+167 more)
(+22 files in other folders)
