[project]
name = "leverageshap"
version = "0.0.1"
description = "Leverage SHAP."
readme = "README.md"
authors = [
    { name = "Christopher Musco" },
    { name = "R. Teal Witter" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy==2.3.2",
    "shap==0.49.1",
    "xgboost==3.1.1",
    "matplotlib==3.10.7",
    "tabulate==0.9.0",
    "networkx==3.5",
    "scipy==1.16.1",
    "scienceplots==2.1.1",
]

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"
